--- a/quiz.HTML
+++ b/quiz.HTML
@@ -24,9 +24,10 @@
 </html>
 <div id ="table">
 <h1>Quizkampen 2019</h1>
+<hr>
 <p id ="question">placeholder</p>
-<p id=""
-</div>
+<p id=""></p>
+
 <form>
     <p> Andvändarnamn </p>
 
@@ -39,4 +40,9 @@
 
 <br>
 <br />
-<button onclick ="start()" id ="startbtn"> Start</button>
+
+<button id ="startbtn"> Start</button>
+
+
+<script src ="quiz.JS"
+</div>
