--- a/quiz.HTML
+++ b/quiz.HTML
@@ -35,13 +35,13 @@
 <br>
 <br>
    <p> hur många gånger vill du köra </p>
-    <input type="number" class="UserChoice">
+    <input type="number" id ="UserNumber" >
 </form>
 
 <br>
 <br />
 
-<button id ="startbtn"> Start</button>
+<button type="submit" id ="startbtn"> Start </button>
 
 
 <script src ="quiz.JS"
